workspace: Fix window activation on activity change

BUG: 501393